--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="icon" type="image/png" href="gambar/logo.jpg" sizes="16x16">
+    
 </head>
 <body>
     <h1 style="text-align: center;">Selamat Datang kembali</h1>
@@ -30,8 +30,8 @@
                             </tr>
                             <tr>
                                 <td colspan="2" align="center">
-                                    <a href="lupa_password.php">Lupa Password?</a> | 
-                                    <a href="buat_akun.php">Buat Akun</a>
+                                    <a href="lupa_password.html">Lupa Password?</a> | 
+                                    <a href="buat_akun.html">Buat Akun</a>
                                 </td>
                             </tr>
                         </table>
