--- a/daftar.html
+++ b/daftar.html
@@ -74,7 +74,8 @@
                         <option value="Laki-laki">Laki-laki</option>
                         <option value="Perempuan">Perempuan</option>
                     </select>
-                     <button type="submit"">DAFTAR</button></td>       
+                     <button type="submit">DAFTAR</button></td>       
+                     <button type="submit">LOGIN</button></td>       
                   </form>     
             </article>
     
