--- a/lupapassword.html
+++ b/lupapassword.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lupa Password</title>
-    <style>
-        body {
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,
+100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<style>
+         .mainn{
             font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f4f4f4;
         }
         form {
             background: white;
@@ -40,16 +44,38 @@
         input[type="submit"]:hover {
             background-color: #00b336;
         }
-    </style>
+   </style>
 </head>
 <body>
-    <form method="post" action="proses_reset_password.php">
-        <fieldset>
-            <h2>Lupa Password</h2>
-            <label for="email">Masukkan Email Anda:</label><br>
-            <input type="email" id="email" name="email" required autocomplete="email"><br>
-            <input type="submit" name="tombol" value="Kirim Reset Password">
-        </fieldset>
-    </form>
+    <!-- navbar -->
+    <nav class="navbar">
+        <div class="navbar-logo"><span>Sayur</span>Verse</div>
+        <a href="daftar.html">Daftar</a>
+        <a href="beranda.html">Beranda</a>
+        <a href="#">Profil</a>
+        <a href="#">Keranjang</a>
+        <div class="navbar-extra">
+            <input type="text" placeholder="Cari Sayuran"> 
+            <div class="icon">
+                 <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </div>
+        </div>
+    </nav>
+    <!-- navbar -end -->
+     <!-- main  -->
+      <div class="mainn">
+        <form method="post" action="proses_reset_password.php">
+            <fieldset>
+                <h2>Lupa Password</h2>
+                <label for="email">Masukkan Email Anda:</label><br>
+                <input type="email" id="email" name="email" required autocomplete="email"><br>
+                <input type="submit" name="tombol" value="Kirim Reset Password">
+            </fieldset>
+        </form>
+      </div>
+       
+        <!-- font awesome icon start-->
+    <script src="https://kit.fontawesome.com/66b0a68b39.js" crossorigin="anonymous"></script>
+    <!-- icon end -->
 </body>
 </html>
