--- a/profil.html
+++ b/profil.html
@@ -1,26 +1,25 @@
+
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil SayurVerse</title>
-    <style>
-        body {
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,
+100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<style>
+        .mainn {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
             margin: 0;
             padding: 0;
+            margin-top: 100px;
         }
-        .navbar {
-            background-color: #2ecc71;
-            padding: 15px;
-            text-align: center;
-            font-size: 20px;
-            color: white;
-            font-weight: bold;
-        }
-        .container {
-            background-color: white;
+
+        .containerr {
+            background-color: #ffffff;
             width: 60%;
             margin: 50px auto;
             padding: 20px;
@@ -64,23 +63,44 @@
         .edit-btn:hover {
             background-color: #27ae60;
         }
-    </style>
+   </style>
 </head>
 <body>
-    <div class="navbar">SayurVerse</div>
-    <div class="container">
-        <div class="info">
-            <p><strong>Nama:</strong><br> Rahmanda Alvin S</p>
-            <p><strong>Alamat:</strong><br> Mojorayung</p>
-            <p><strong>Kota:</strong><br> Madiun</p>
-            <p><strong>E-mail:</strong><br> rahmandaalvin1212</p>
-            <p><strong>Jenis Kelamin:</strong><br> Laki-Laki</p>
+    <!-- navbar -->
+    <nav class="navbar">
+        <div class="navbar-logo"><span>Sayur</span>Verse</div>
+        <a href="daftar.html">Daftar</a>
+        <a href="beranda.html">Beranda</a>
+        <a href="#">Profil</a>
+        <a href="#">Keranjang</a>
+        <div class="navbar-extra">
+            <input type="text" placeholder="Cari Sayuran"> 
+            <div class="icon">
+                 <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+            </div>
         </div>
-        <div class="profile">
-            <img src="gambar/alvin.png" alt="Foto Profil">
-            <br>
-            <button class="edit-btn">EDIT BIODATA</button>
+    </nav>
+    <!-- navbar -end -->
+     <!-- main  -->
+      <div class="mainn">
+        <div class="containerr">
+            <div class="info">
+                <p><strong>Nama:</strong><br> Rahmanda Alvin S</p>
+                <p><strong>Alamat:</strong><br> Mojorayung</p>
+                <p><strong>Kota:</strong><br> Madiun</p>
+                <p><strong>E-mail:</strong><br> rahmandaalvin1212</p>
+                <p><strong>Jenis Kelamin:</strong><br> Laki-Laki</p>
+            </div>
+            <div class="profile">
+                <img src="gambar/alvin.png" alt="Foto Profil">
+                <br>
+                <button class="edit-btn">EDIT BIODATA</button>
+            </div>
         </div>
-    </div>
+      </div>
+       
+        <!-- font awesome icon start-->
+    <script src="https://kit.fontawesome.com/66b0a68b39.js" crossorigin="anonymous"></script>
+    <!-- icon end -->
 </body>
 </html>
