--- a/lupapassword.html
+++ b/lupapassword.html
@@ -1,81 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,
-100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-<style>
-         .mainn{
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        form {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        fieldset {
-            border: none;
-        }
-        input[type="email"] {
-            width: 100%;
-            padding: 8px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        input[type="submit"] {
-            background-color: #00ff04c0;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        input[type="submit"]:hover {
-            background-color: #00b336;
-        }
-   </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lupa Password</title>
+  <style>
+    body {
+      background-color: #e6f4ea;
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .container {
+      background-color: #ffffff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0, 128, 0, 0.2);
+      width: 100%;
+      max-width: 400px;
+    }
+    h2 {
+      text-align: center;
+      color: #2e7d32;
+    }
+    label {
+      display: block;
+      margin-top: 15px;
+      color: #388e3c;
+    }
+    input[type="email"],
+    input[type="text"],
+    input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      border: 1px solid #a5d6a7;
+      border-radius: 5px;
+    }
+    button {
+      margin-top: 20px;
+      width: 100%;
+      padding: 10px;
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #388e3c;
+    }
+    .step {
+      display: none;
+    }
+    .step.active {
+      display: block;
+    }
+    .success {
+      color: green;
+      text-align: center;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
-    <!-- navbar -->
-    <nav class="navbar">
-        <div class="navbar-logo"><span>Sayur</span>Verse</div>
-        <a href="daftar.html">Daftar</a>
-        <a href="beranda.html">Beranda</a>
-        <a href="#">Profil</a>
-        <a href="#">Keranjang</a>
-        <div class="navbar-extra">
-            <input type="text" placeholder="Cari Sayuran"> 
-            <div class="icon">
-                 <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            </div>
-        </div>
-    </nav>
-    <!-- navbar -end -->
-     <!-- main  -->
-      <div class="mainn">
-        <form method="post" action="proses_reset_password.php">
-            <fieldset>
-                <h2>Lupa Password</h2>
-                <label for="email">Masukkan Email Anda:</label><br>
-                <input type="email" id="email" name="email" required autocomplete="email"><br>
-                <input type="submit" name="tombol" value="Kirim Reset Password">
-            </fieldset>
-        </form>
+  <div class="container">
+    <h2>Lupa Password</h2>
+    <form id="resetForm">
+      <div class="step active" id="step1">
+        <label for="email">Email:</label>
+        <input type="email" id="email" required>
+        <button type="button" onclick="nextStep(1)">Lanjut</button>
       </div>
-       
-        <!-- font awesome icon start-->
-    <script src="https://kit.fontawesome.com/66b0a68b39.js" crossorigin="anonymous"></script>
-    <!-- icon end -->
+
+      <div class="step" id="step2">
+        <label for="kode">Kode Verifikasi:</label>
+        <input type="text" id="kode" required>
+        <button type="button" onclick="nextStep(2)">Lanjut</button>
+      </div>
+
+      <div class="step" id="step3">
+        <label for="newPassword">Password Baru:</label>
+        <input type="password" id="newPassword" required>
+        <button type="submit">Reset Password</button>
+      </div>
+
+      <p class="success" id="successMessage" style="display:none;">Password berhasil direset!</p>
+    </form>
+  </div>
+
+  <script>
+    function nextStep(current) {
+      document.getElementById(`step${current}`).classList.remove('active');
+      document.getElementById(`step${current + 1}`).classList.add('active');
+    }
+
+    const form = document.getElementById('resetForm');
+    const successMessage = document.getElementById('successMessage');
+
+    form.addEventListener('submit', function(e) {
+      e.preventDefault();
+      document.getElementById('step3').classList.remove('active');
+      successMessage.style.display = 'block';
+    });
+  </script>
 </body>
 </html>
