--- a/profil.html
+++ b/profil.html
@@ -1,106 +1,144 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,
-100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-<style>
-        .mainn {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            margin-top: 100px;
-        }
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,
+                100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+  <title>Profil Pengguna</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #eaf6ec;
+    }
 
-        .containerr {
-            background-color: #ffffff;
-            width: 60%;
-            margin: 50px auto;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-        .info {
-            width: 60%;
-        }
-        .info p {
-            font-size: 18px;
-            padding: 10px 0;
-            border-bottom: 1px solid #ddd;
-            margin: 0;
-        }
-        .profile {
-            text-align: center;
-        }
-        .profile img {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            object-fit: cover;
-            border: 2px solid #2ecc71;
-        }
-        .edit-btn {
-            background-color: #2ecc71;
-            color: white;
-            border: none;
-            padding: 10px 15px;
-            margin-top: 15px;
-            cursor: pointer;
-            border-radius: 5px;
-            font-size: 16px;
-            font-weight: bold;
-            transition: 0.3s;
-        }
-        .edit-btn:hover {
-            background-color: #27ae60;
-        }
-   </style>
+    header {
+      background-color: #f2f8f0;
+      padding: 15px 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    header .logo {
+      font-weight: bold;
+      font-size: 20px;
+      color: #29a329;
+    }
+
+    nav a {
+      margin: 0 10px;
+      text-decoration: none;
+      color: #333;
+    }
+
+    .search-box {
+      padding: 8px;
+      border-radius: 20px;
+      border: 1px solid #ccc;
+      outline: none;
+    }
+
+    .green-bar {
+      height: 100px;
+      background-color: #00cc4c;
+    }
+
+    .profile-container {
+      background: white;
+      width: 70%;
+      max-width: 800px;
+      margin: -50px auto 0 auto;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+      padding: 30px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    .biodata {
+      width: 60%;
+    }
+
+    .biodata p {
+      font-weight: bold;
+      margin: 15px 0 5px;
+    }
+
+    .biodata input {
+      width: 90%;
+      padding: 8px;
+      background: #f5f5f5;
+      border: none;
+    }
+
+    .profile-photo {
+      text-align: center;
+    }
+
+    .profile-photo img {
+      border-radius: 50%;
+      width: 100px;
+      height: 100px;
+    }
+
+    .profile-photo p {
+      font-weight: bold;
+      margin-top: 10px;
+    }
+
+    .edit-btn {
+      background-color: #e0e0e0;
+      padding: 10px 15px;
+      margin-top: 15px;
+      border: none;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-    <!-- navbar -->
-    <nav class="navbar">
-        <div class="navbar-logo"><span>Sayur</span>Verse</div>
-        <a href="daftar.html">Daftar</a>
-        <a href="beranda.html">Beranda</a>
-        <a href="#">Profil</a>
-        <a href="#">Keranjang</a>
-        <div class="navbar-extra">
-            <input type="text" placeholder="Cari Sayuran"> 
-            <div class="icon">
-                 <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            </div>
-        </div>
+
+  <header>
+    <div class="logo">Sayur<span style="color: gray;">Verse</span></div>
+    <nav>
+      <a href="#">Daftar</a>
+      <a href="#">Beranda</a>
+      <a href="#">Profil</a>
+      <a href="#">Keranjang</a>
     </nav>
-    <!-- navbar -end -->
-     <!-- main  -->
-      <div class="mainn">
-        <div class="containerr">
-            <div class="info">
-                <p><strong>Nama:</strong><br> Rahmanda Alvin S</p>
-                <p><strong>Alamat:</strong><br> Mojorayung</p>
-                <p><strong>Kota:</strong><br> Madiun</p>
-                <p><strong>E-mail:</strong><br> rahmandaalvin1212</p>
-                <p><strong>Jenis Kelamin:</strong><br> Laki-Laki</p>
-            </div>
-            <div class="profile">
-                <img src="gambar/alvin.png" alt="Foto Profil">
-                <br>
-                <button class="edit-btn">EDIT BIODATA</button>
-            </div>
+    <div class="navbar-extra">
+        <input type="text" placeholder="Cari Sayuran"> 
+        <div class="icon">
+             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
         </div>
-      </div>
-       
-        <!-- font awesome icon start-->
-    <script src="https://kit.fontawesome.com/66b0a68b39.js" crossorigin="anonymous"></script>
-    <!-- icon end -->
+    </div>
+  </header>
+
+  <div class="green-bar"></div>
+
+  <div class="profile-container">
+    <div class="biodata">
+      <p>Nama</p>
+      <input type="text" readonly value="Rahmanda Alvin ">
+      <p>Alamat</p>
+      <input type="text" readonly value="MOjorayung">
+      <p>Kota</p>
+      <input type="text" readonly value="Madiun">
+      <p>E-mail</p>
+      <input type="text" readonly value="rahmandaalvin">
+      <p>Jenis Kelamin</p>
+      <input type="text" readonly value="laki-laki">
+    </div>
+    <div class="profile-photo">
+      <p>Foto Profil</p>
+      <img src="gambar/alvin.png" alt="Foto Profil">
+      <br>
+      <button class="edit-btn">EDIT BIODATA</button>
+    </div>
+  </div>
+
 </body>
 </html>
