--- a/profil.html
+++ b/profil.html
@@ -1,144 +1,115 @@
 <!DOCTYPE html>
-<html lang="id">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profil</title>
   <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,
-                100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-  <title>Profil Pengguna</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #eaf6ec;
-    }
-
-    header {
-      background-color: #f2f8f0;
-      padding: 15px 40px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-    }
-
-    header .logo {
-      font-weight: bold;
-      font-size: 20px;
-      color: #29a329;
-    }
-
-    nav a {
-      margin: 0 10px;
-      text-decoration: none;
-      color: #333;
-    }
-
-    .search-box {
-      padding: 8px;
-      border-radius: 20px;
-      border: 1px solid #ccc;
-      outline: none;
-    }
-
-    .green-bar {
-      height: 100px;
-      background-color: #00cc4c;
-    }
-
-    .profile-container {
-      background: white;
-      width: 70%;
-      max-width: 800px;
-      margin: -50px auto 0 auto;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-      padding: 30px;
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .biodata {
-      width: 60%;
-    }
-
-    .biodata p {
-      font-weight: bold;
-      margin: 15px 0 5px;
-    }
-
-    .biodata input {
-      width: 90%;
-      padding: 8px;
-      background: #f5f5f5;
-      border: none;
-    }
-
-    .profile-photo {
-      text-align: center;
-    }
-
-    .profile-photo img {
-      border-radius: 50%;
-      width: 100px;
-      height: 100px;
-    }
-
-    .profile-photo p {
-      font-weight: bold;
-      margin-top: 10px;
-    }
-
-    .edit-btn {
-      background-color: #e0e0e0;
-      padding: 10px 15px;
-      margin-top: 15px;
-      border: none;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-
-  <header>
-    <div class="logo">Sayur<span style="color: gray;">Verse</span></div>
-    <nav>
-      <a href="#">Daftar</a>
-      <a href="#">Beranda</a>
-      <a href="#">Profil</a>
-      <a href="#">Keranjang</a>
-    </nav>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="navbar-logo"><span>Sayur</span>Verse</div>
+    <a href="#">Produk</a>
+    <a href="beranda.html">Beranda</a>
+    <a href="profil.html" class="active">Profil</a>
+    <a href="#">Keranjang</a>
     <div class="navbar-extra">
-        <input type="text" placeholder="Cari Sayuran"> 
-        <div class="icon">
-             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-        </div>
+      <input type="text" placeholder="Cari Sayuran"> 
+      <div class="icon">
+        <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+      </div>
     </div>
-  </header>
+  </nav>
 
-  <div class="green-bar"></div>
-
-  <div class="profile-container">
-    <div class="biodata">
-      <p>Nama</p>
-      <input type="text" readonly value="Rahmanda Alvin ">
-      <p>Alamat</p>
-      <input type="text" readonly value="MOjorayung">
-      <p>Kota</p>
-      <input type="text" readonly value="Madiun">
-      <p>E-mail</p>
-      <input type="text" readonly value="rahmandaalvin">
-      <p>Jenis Kelamin</p>
-      <input type="text" readonly value="laki-laki">
-    </div>
-    <div class="profile-photo">
-      <p>Foto Profil</p>
-      <img src="gambar/alvin.png" alt="Foto Profil">
-      <br>
-      <button class="edit-btn">EDIT BIODATA</button>
+  <div class="boxx">
+    <div class="ggroupp">
+      <div class="ovverlap-grooup">
+        <div class="gbanner"><img class="ikiBG" src="gambar/bannerg.png"></div>
+        <div class="text-wrapper">Profil</div>
+      </div>
     </div>
   </div>
 
+  <div class="body-wrapper">
+    <div class="content">
+      <div class="sidebar">
+        <div class="button active">Informasi Pribadi</div>
+        <div class="button">Keluar</div>
+      </div>
+
+      <div class="profil-section">
+        <div class="avatar-wrapper">
+          <div class="avatar-circle"></div>
+          <img class="avatar-img" src="gambar/alvin.png" alt="Foto Profil">
+        </div>
+
+        <div class="bio">
+          <div class="bio-row">
+            <div class="bio-label">Nama</div>
+            <input class="bio-box" type="text" value="" readonly>
+          </div>
+          <div class="bio-row">
+            <div class="bio-label">Alamat</div>
+            <input class="bio-box" type="text" value="" readonly>
+          </div>
+          <div class="bio-row">
+            <div class="bio-label">No. Telepon</div>
+            <input class="bio-box" type="text" value="" readonly>
+          </div>
+          <div class="bio-row">
+            <div class="bio-label">E-mail</div>
+            <input class="bio-box" type="email" value="" readonly>
+          </div>
+          <div class="bio-row">
+            <div class="bio-label">Jenis Kelamin</div>
+            <input class="bio-box" type="text" value="" readonly>
+          </div>
+        </div>
+        <div class="edit-btn">Perbarui</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Logout -->
+  <div id="logoutModal" class="modal-overlay" style="display: none;">
+  <div class="modal-box">
+    <h2>Jika anda keluar anda akan diarahkan ke halaman login, anda yakin?</h2>
+    <div style="display: flex; gap: 10px; justify-content: center;">
+      <button id="confirmLogout" class="submit-btn">Ya</button>
+      <button id="cancelLogout" class="submit-btn" style="background-color: grey;">Tidak</button>
+    </div>
+  </div>
+</div>
+  
+  <!-- Modal -->
+<div id="modal" class="modal-overlay">
+  <div class="modal-box">
+    <h2>Perbarui Biodata</h2>
+    <form id="biodataForm">
+      <label>Nama:</label>
+      <input type="text" id="nama" required>
+
+      <label>Alamat:</label>
+      <input type="text" id="alamat" required>
+
+      <label>No. Telepon:</label>
+      <input type="text" id="telepon" required>
+
+      <label>E-mail:</label>
+      <input type="email" id="email" required>
+
+      <label>Jenis Kelamin:</label>
+      <input type="text" id="gender" required>
+
+      <button type="submit" class="submit-btn">Simpan</button>
+    </form>
+  </div>
+</div>
+
+<script src="/js/profile.js"></script>
+</body>
+</html>
 </body>
 </html>
